compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_type_in_alias2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type IntMap = Map<Inf, Int>"
---
error: Unknown type
  ┌─ /src/one/two.rakun:1:19
  │
1 │ type IntMap = Map<Inf, Int>
  │                   ^^^ Did you mean `Int`?

The type `Inf` is not defined or imported in this module.
