compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_variable_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 236
expression: Int
---
----- SOURCE CODE
Int

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.rakun:1:1
  │
1 │ Int
  │ ^^^

`Int` is a type, it cannot be used as a value.
