compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__wrong_number_of_subjects.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 380
expression: "case 1 { _, _ -> 1 }"
---
----- SOURCE CODE
case 1 { _, _ -> 1 }

----- ERROR
error: Incorrect number of patterns
  ┌─ /src/one/two.rakun:1:10
  │
1 │ case 1 { _, _ -> 1 }
  │          ^^^^^^^^^ Expected 1 patterns, got 2

This case expression has 1 subjects, but this pattern matches 2.
Each clause must have a pattern for every subject value.
